# dagger

./: Cargo.toml  README.md
dagger_cli/: Cargo.toml
dagger_cli/src/: cli.rs  dg.rs  error.rs  git.rs  manager.rs  spinner.rs
dagger_lib/: Cargo.toml
dagger_lib/src/: cowstr.rs  error.rs  lib.rs  macros.rs  path.rs
dagger_lib/src/api/: dagger_api.rs  git_callback.rs  impls.rs  mod.rs
dagger_lib/src/installer/: api.rs  git.rs  lock.rs  manager.rs  mod.rs
dagger_lib/src/path/: lnx.rs  mod.rs
lsp/: def.lua
src/: cli.rs  directories.rs  err.rs  error.rs  ext.rs  lib.rs  lua.rs  macros.rs  specification.rs  updater.rs  utils.rs
src/cli/: commands.rs  mod.rs
src/core/: lock.rs  metadata.rs  mod.rs
src/directories/: linux.rs  mod.rs
src/ext/: mod.rs
src/installer/: git.rs  lock.rs  manager.rs  mod.rs
src/lua/: mod.rs  spec.rs
src/lua_api/: add.rs  mod.rs
src/models/: lock.rs  mod.rs  spec.rs  spec_manager.rs
src/path/: lnx.rs  mac.rs  mod.rs  win.rs  windows.rs
src/utils/: spinner.rs
