[package]
    authors     = ["Rhelvetican"]
    description = "A simple Balatro CLI mod manager. Powered by Git."
    edition     = "2024"
    keywords    = ["balatro", "manager", "mod", "mod_manager"]
    license     = "MIT"
    name        = "dagger"
    version     = "0.2.0"

[[bin]]
    name = "dg"
    path = "src/bin/dg.rs"

[dependencies]
    clap  = { features = ["derive"], version = "4" }
    git2  = { features = ["https"], version = "0.20" }
    serde = { features = ["derive"], version = "1" }
    toml  = "0.9"

    indicatif = "0.18"
    thiserror = "2"
