[workspace]
    members  = ["dagger_cli/", "dagger_lib/"]
    resolver = "3"

    [workspace.package]
        authors     = ["Alvin Dong", "Rhelvetican <bionicvnb@gmail.com>"]
        description = "A simple Balatro CLI mod manager. Powered by Git."
        edition     = "2024"
        keywords    = ["balatro", "manager", "mod", "mod_manager"]
        license     = "MIT"
        version     = "0.2.1"
