[package]
    name = "dagger_cli"

    description.workspace = true
    edition.workspace     = true
    keywords.workspace    = true
    license.workspace     = true
    version.workspace     = true

[[bin]]
    name = "dg"
    path = "src/dg.rs"

[dependencies]
    dagger_lib = { path = "../dagger_lib/", version = "0" }

    clap      = { features = ["derive"], version = "4" }
    indicatif = "0.18"
    thiserror = "2"

    serde = { features = ["derive"], version = "1" }
    toml  = "0.9"
