[package]
    name = "dagger_lib"

    description.workspace = true
    edition.workspace     = true
    keywords.workspace    = true
    license.workspace     = true
    version.workspace     = true

[dependencies]
    clap      = { features = ["derive"], version = "4" }
    git2      = { features = ["https"], version = "0.20" }
    serde     = { features = ["derive"], version = "1" }
    thiserror = "2"
    toml      = "0.9"

    dirs = "6"
