[package]
    name = "dagger_lib"

    description.workspace = true
    edition.workspace     = true
    keywords.workspace    = true
    license.workspace     = true
    version.workspace     = true

[dependencies]
    git2      = { features = ["https"], version = "0.20" }
    serde     = "1"
    thiserror = "2"

    dirs = "6"
